<resources>
    <string name="app_name">VeggieeAdmin</string>
    <string name="login_phone_hint">Phone</string>
    <string name="enter_password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="order">Orders</string>
    <string name="logout">logout</string>
    <string name="menu">Menu</string>
    <string name="orders">Order</string>
    <string name="cart">Cart</string>
    <string name="name">Name</string>
    <string name="select">Select Image</string>
    <string name="upload">Upload</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="channel_name">New Order</string>
    <string name="channel_description">Arrival of new order</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="add_staff">Add Staff</string>
    <string name="register">Register</string>
    <string name="register_staff_name">Name</string>
    <string name="enter_current_password">Enter Current Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="update">Update</string>
</resources>
