<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StaffActivity"
    android:background="@color/colorBrown"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo"/>

    <android.support.design.widget.TextInputLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nameTextLayout"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/logo">


        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameEditText"
            android:hint="@string/register_staff_name"
            android:inputType="text"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="5dp"
            android:textColor="@color/colorPrimaryDark"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phoneTextLayout"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/nameTextLayout">


        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phoneEditText"
            android:hint="@string/login_phone_hint"
            android:inputType="phone"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="5dp"
            android:textColor="@color/colorPrimaryDark"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordTextLayout"
        android:layout_below="@id/phoneTextLayout">


        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordEditText"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="5dp"
            android:textColor="@color/colorPrimaryDark"/>

    </android.support.design.widget.TextInputLayout>

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:layout_margin="15dp"
        android:layout_below="@id/passwordTextLayout"
        android:id="@+id/rollSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/RaisedButton"
        android:hint="Select Staff Roll"
        android:textColorHint="@color/primary_text"/>

    <android.support.v7.widget.AppCompatButton
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registerButton"
        android:text="@string/register"
        android:layout_below="@id/rollSpinner"
        style="@style/RaisedButton"/>

</RelativeLayout>